[project]
name = "open-event-feed"
version = "0.1.2"
description = "python implementation of Open Event Feed"
readme = "README.md"
authors = [{ name = "Isaac McAuley", email = "me@imcauley.com" }]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ty>=0.0.13"]
